News UAT/force-app/main/default/objects/Opportunity__x/fields/Likelihood_c__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_c__c</fullName>
    <externalDeveloperName>Likelihood__c</externalDeveloperName>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting/pitching (15%)</fullName>
            </value>
            <value>
                <fullName>Possibly (35%)</fullName>
            </value>
            <value>
                <fullName>Probably (60%)</fullName>
            </value>
            <value>
                <fullName>Likely (80%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>