News UAT/force-app/main/default/objects/Opportunity__x/fields/Likelihood_value_c__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_value_c__c</fullName>
    <externalDeveloperName>Likelihood_value__c</externalDeveloperName>
    <label>Likelihood value ($)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>