News UAT/force-app/main/default/objects/Opportunity__x/fields/MainCompetitor_del_c__c.field-meta.xml
<CustomField>
    <fullName>MainCompetitor_del_c__c</fullName>
    <externalDeveloperName>MainCompetitor_del__c</externalDeveloperName>
    <label>Main Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>