News UAT/force-app/main/default/objects/Opportunity__x/fields/MakeGood_c__c.field-meta.xml
<CustomField>
    <fullName>MakeGood_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>MakeGood__c</externalDeveloperName>
    <label>Make Good</label>
    <type>Checkbox</type>
</CustomField>