News UAT/force-app/main/default/objects/Opportunity__x/fields/MarketingObjective_c__c.field-meta.xml
<CustomField>
    <fullName>MarketingObjective_c__c</fullName>
    <externalDeveloperName>MarketingObjective__c</externalDeveloperName>
    <label>Marketing Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>