News UAT/force-app/main/default/objects/Opportunity__x/fields/News_Xtend_Team_Member_Exists_c__c.field-meta.xml
<CustomField>
    <fullName>News_Xtend_Team_Member_Exists_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>News_Xtend_Team_Member_Exists__c</externalDeveloperName>
    <label>News Xtend Team Member Exists</label>
    <type>Checkbox</type>
</CustomField>