News UAT/force-app/main/default/objects/Opportunity__x/fields/Number_of_DMS_Products_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_DMS_Products_c__c</fullName>
    <externalDeveloperName>Number_of_DMS_Products__c</externalDeveloperName>
    <label>Number of DMS Products</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>