News UAT/force-app/main/default/objects/Opportunity__x/fields/NX_Lead_Generator_c__c.field-meta.xml
<CustomField>
    <fullName>NX_Lead_Generator_c__c</fullName>
    <externalDeveloperName>NX_Lead_Generator__c</externalDeveloperName>
    <label>NX Lead Generator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>