News UAT/force-app/main/default/objects/Opportunity__x/fields/NZM_Brief_Sent_c__c.field-meta.xml
<CustomField>
    <fullName>NZM_Brief_Sent_c__c</fullName>
    <externalDeveloperName>NZM_Brief_Sent__c</externalDeveloperName>
    <label>NZM Brief Sent</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>