News UAT/force-app/main/default/objects/Opportunity__x/fields/NZM_Customer_Status_c__c.field-meta.xml
<CustomField>
    <fullName>NZM_Customer_Status_c__c</fullName>
    <externalDeveloperName>NZM_Customer_Status__c</externalDeveloperName>
    <label>NZM Customer Status</label>
    <type>TextArea</type>
</CustomField>