News UAT/force-app/main/default/objects/Opportunity__x/fields/NZM_Opportunity_Category_c__c.field-meta.xml
<CustomField>
    <fullName>NZM_Opportunity_Category_c__c</fullName>
    <externalDeveloperName>NZM_Opportunity_Category__c</externalDeveloperName>
    <label>NZM Opportunity Category</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>