News UAT/force-app/main/default/objects/Opportunity__x/fields/Online_c__c.field-meta.xml
<CustomField>
    <fullName>Online_c__c</fullName>
    <externalDeveloperName>Online__c</externalDeveloperName>
    <label>Online</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>