News UAT/force-app/main/default/objects/Opportunity__x/fields/Opportunity_Name_Owner_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Owner_c__c</fullName>
    <externalDeveloperName>Opportunity_Name_Owner__c</externalDeveloperName>
    <label>Opportunity Name &amp; Owner</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>