News UAT/force-app/main/default/objects/Opportunity__x/fields/Opportunity_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_c__c</fullName>
    <externalDeveloperName>Opportunity_Number__c</externalDeveloperName>
    <label>Opportunity Number</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>