News UAT/force-app/main/default/objects/Opportunity__x/fields/Opportunity_Owner_Region_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Region_c__c</fullName>
    <externalDeveloperName>Opportunity_Owner_Region__c</externalDeveloperName>
    <label>Opportunity Owner Region</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>