News UAT/force-app/main/default/objects/Opportunity__x/fields/Opportunity_Pacific_Mags_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Pacific_Mags_ID_c__c</fullName>
    <externalDeveloperName>Opportunity_Pacific_Mags_ID__c</externalDeveloperName>
    <label>Opportunity Pacific Mags ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>