News UAT/force-app/main/default/objects/Opportunity__x/fields/Opportunity_Source_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source_c__c</fullName>
    <externalDeveloperName>Opportunity_Source__c</externalDeveloperName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertised in other competitor</fullName>
            </value>
            <value>
                <fullName>Advertised in press competitor</fullName>
            </value>
            <value>
                <fullName>Advertised in radio competitor</fullName>
            </value>
            <value>
                <fullName>Advertised in TV competitor</fullName>
            </value>
            <value>
                <fullName>Contact Centre referral</fullName>
            </value>
            <value>
                <fullName>Editorial Referral</fullName>
            </value>
            <value>
                <fullName>Features referral</fullName>
            </value>
            <value>
                <fullName>Free market or local council reports</fullName>
            </value>
            <value>
                <fullName>Lapsed Account Database</fullName>
            </value>
            <value>
                <fullName>Lapsed Accounts</fullName>
            </value>
            <value>
                <fullName>Local Mail Drop</fullName>
            </value>
            <value>
                <fullName>Marketing Referral</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Referral from existing customer</fullName>
            </value>
            <value>
                <fullName>Self-sourced</fullName>
            </value>
            <value>
                <fullName>Current Advertiser</fullName>
            </value>
            <value>
                <fullName>Ad Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>