News UAT/force-app/main/default/objects/Opportunity__x/fields/Opportunity_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_c__c</fullName>
    <externalDeveloperName>Opportunity_Type__c</externalDeveloperName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Classified</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Run of Press</fullName>
            </value>
            <value>
                <fullName>Special Publication</fullName>
            </value>
            <value>
                <fullName>Media Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>