News UAT/force-app/main/default/objects/Opportunity__x/fields/Other_Advertising_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Advertising_c__c</fullName>
    <externalDeveloperName>Other_Advertising__c</externalDeveloperName>
    <label>Other Advertising</label>
    <type>TextArea</type>
</CustomField>