News UAT/force-app/main/default/objects/Opportunity__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Opportunity Owner</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>NRM Opportunities</relationshipLabel>
    <relationshipName>NRM_Opportunities</relationshipName>
    <type>ExternalLookup</type>
</CustomField>