News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Billing_City_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Billing_City_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Billing_City__c</externalDeveloperName>
    <label>Payment Profile Billing City</label>
    <length>155</length>
    <type>Text</type>
</CustomField>