News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Billing_Country_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Billing_Country_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Billing_Country__c</externalDeveloperName>
    <label>Payment Profile Billing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>