News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Billing_State_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Billing_State_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Billing_State__c</externalDeveloperName>
    <label>Payment Profile Billing State</label>
    <length>55</length>
    <type>Text</type>
</CustomField>