News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Billing_Zip_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Billing_Zip_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Billing_Zip__c</externalDeveloperName>
    <label>Payment Profile Billing Zip</label>
    <length>4</length>
    <type>Text</type>
</CustomField>