News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Card_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Card_Type_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Card_Type__c</externalDeveloperName>
    <label>Payment Profile Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>