News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Expiration_Year_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Expiration_Year_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Expiration_Year__c</externalDeveloperName>
    <label>Payment Profile Expiration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>