News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_First_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_First_Name_c__c</fullName>
    <externalDeveloperName>Payment_Profile_First_Name__c</externalDeveloperName>
    <label>Payment Profile First Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>