News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Last_Four_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Last_Four_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Last_Four__c</externalDeveloperName>
    <label>Payment Profile Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>