News UAT/force-app/main/default/objects/Opportunity__x/fields/Payment_Profile_Vault_Token_c__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile_Vault_Token_c__c</fullName>
    <externalDeveloperName>Payment_Profile_Vault_Token__c</externalDeveloperName>
    <label>Payment Profile Vault Token</label>
    <length>25</length>
    <type>Text</type>
</CustomField>