News UAT/force-app/main/default/objects/Opportunity__x/fields/Presentation_c__c.field-meta.xml
<CustomField>
    <fullName>Presentation_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Presentation__c</externalDeveloperName>
    <label>Presentation</label>
    <type>Checkbox</type>
</CustomField>