News UAT/force-app/main/default/objects/Opportunity__x/fields/Priority_c__c.field-meta.xml
<CustomField>
    <fullName>Priority_c__c</fullName>
    <externalDeveloperName>Priority__c</externalDeveloperName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>