News UAT/force-app/main/default/objects/Opportunity__x/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <externalDeveloperName>Probability</externalDeveloperName>
    <label>Probability (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>