News UAT/force-app/main/default/objects/Opportunity__x/fields/Product_Handle_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Handle_c__c</fullName>
    <externalDeveloperName>Product_Handle__c</externalDeveloperName>
    <label>Product Handle</label>
    <length>128</length>
    <type>Text</type>
</CustomField>