News UAT/force-app/main/default/objects/Opportunity__x/fields/Proposed_Opportunity_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Opportunity_Amount_c__c</fullName>
    <externalDeveloperName>Proposed_Opportunity_Amount__c</externalDeveloperName>
    <label>Proposed Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>