News UAT/force-app/main/default/objects/Opportunity__x/fields/Publication_c__c.field-meta.xml
<CustomField>
    <fullName>Publication_c__c</fullName>
    <externalDeveloperName>Publication__c</externalDeveloperName>
    <label>Publication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ballina Shire Advoc</fullName>
            </value>
            <value>
                <fullName>Balonne Beacon</fullName>
            </value>
            <value>
                <fullName>Big Rigs</fullName>
            </value>
            <value>
                <fullName>Biloela Central Tele</fullName>
            </value>
            <value>
                <fullName>Blackwater Herald</fullName>
            </value>
            <value>
                <fullName>Border Post</fullName>
            </value>
            <value>
                <fullName>Bribie Island</fullName>
            </value>
            <value>
                <fullName>Bribie Weekly</fullName>
            </value>
            <value>
                <fullName>BU Bus Directory</fullName>
            </value>
            <value>
                <fullName>Buderim Chronicle</fullName>
            </value>
            <value>
                <fullName>Bush Telegraph</fullName>
            </value>
            <value>
                <fullName>Byron Shire News</fullName>
            </value>
            <value>
                <fullName>Caboolture News</fullName>
            </value>
            <value>
                <fullName>Caloundra Weekly</fullName>
            </value>
            <value>
                <fullName>Capricorn Cst Mirror</fullName>
            </value>
            <value>
                <fullName>CA Property</fullName>
            </value>
            <value>
                <fullName>Central and North Burnett Times</fullName>
            </value>
            <value>
                <fullName>Central Qld News</fullName>
            </value>
            <value>
                <fullName>Chinchilla News</fullName>
            </value>
            <value>
                <fullName>CityLife Mackay &amp; The Whitsundays</fullName>
            </value>
            <value>
                <fullName>CityLife Townsville</fullName>
            </value>
            <value>
                <fullName>CityLife Tropical North Queensland</fullName>
            </value>
            <value>
                <fullName>Coastal Views</fullName>
            </value>
            <value>
                <fullName>Coffs Coast Advocate</fullName>
            </value>
            <value>
                <fullName>Community Advocate</fullName>
            </value>
            <value>
                <fullName>Cooloola Advertiser</fullName>
            </value>
            <value>
                <fullName>Coolum &amp; North Shore News</fullName>
            </value>
            <value>
                <fullName>Countrycars</fullName>
            </value>
            <value>
                <fullName>CQN Property</fullName>
            </value>
            <value>
                <fullName>DAE Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>