News UAT/force-app/main/default/objects/Opportunity__x/fields/Publication_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Publication_NZ_c__c</fullName>
    <externalDeveloperName>Publication_NZ__c</externalDeveloperName>
    <label>Publication NZ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Zealand Herald</fullName>
            </value>
            <value>
                <fullName>Canvas Magazine</fullName>
            </value>
            <value>
                <fullName>The Business</fullName>
            </value>
            <value>
                <fullName>My Generation</fullName>
            </value>
            <value>
                <fullName>Element</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>NZ Online Employ</fullName>
            </value>
            <value>
                <fullName>NZH Online General</fullName>
            </value>
            <value>
                <fullName>Herald On Sunday</fullName>
            </value>
            <value>
                <fullName>Sunday Detours</fullName>
            </value>
            <value>
                <fullName>The Aucklander</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Sunday Homes</fullName>
            </value>
            <value>
                <fullName>Listener</fullName>
            </value>
            <value>
                <fullName>Creme</fullName>
            </value>
            <value>
                <fullName>Womans Weekly</fullName>
            </value>
            <value>
                <fullName>Simply You</fullName>
            </value>
            <value>
                <fullName>Simply You Living</fullName>
            </value>
            <value>
                <fullName>Bay of Plenty Times</fullName>
            </value>
            <value>
                <fullName>BOP Property Guide</fullName>
            </value>
            <value>
                <fullName>Indulge (ex TVT)</fullName>
            </value>
            <value>
                <fullName>Country News</fullName>
            </value>
            <value>
                <fullName>Bay News</fullName>
            </value>
            <value>
                <fullName>Te Puke Times</fullName>
            </value>
            <value>
                <fullName>Katikati Advertiser</fullName>
            </value>
            <value>
                <fullName>Waihi Leader</fullName>
            </value>
            <value>
                <fullName>Coastal News</fullName>
            </value>
            <value>
                <fullName>BOP Special Pubs</fullName>
            </value>
            <value>
                <fullName>BOP OnlinePubs</fullName>
            </value>
            <value>
                <fullName>Hamilton News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>