News UAT/force-app/main/default/objects/Opportunity__x/fields/Publication_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Publication_Type_c__c</fullName>
    <externalDeveloperName>Publication_Type__c</externalDeveloperName>
    <label>Publication Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Classified</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Onserts</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Run of Press</fullName>
            </value>
            <value>
                <fullName>Special Publication</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Fairfax - New</fullName>
            </value>
            <value>
                <fullName>Fairfax - Re-sign</fullName>
            </value>
            <value>
                <fullName>Bundle - Print &amp; Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>