News UAT/force-app/main/default/objects/Opportunity__x/fields/Publishing_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Date_c__c</fullName>
    <externalDeveloperName>Publishing_Date__c</externalDeveloperName>
    <label>Publishing Date</label>
    <type>Date</type>
</CustomField>