News UAT/force-app/main/default/objects/Opportunity__x/fields/Rate_Agreement_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreement_Type_c__c</fullName>
    <externalDeveloperName>Rate_Agreement_Type__c</externalDeveloperName>
    <label>Rate Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>