News UAT/force-app/main/default/objects/Opportunity__x/fields/Reason_Lost_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost_c__c</fullName>
    <externalDeveloperName>Reason_Lost__c</externalDeveloperName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price - exceeds companies budget</fullName>
            </value>
            <value>
                <fullName>Price - beaten by competitor</fullName>
            </value>
            <value>
                <fullName>Product/Campaign not suitable</fullName>
            </value>
            <value>
                <fullName>Existing relationship with competitor</fullName>
            </value>
            <value>
                <fullName>Companies business needs changed</fullName>
            </value>
            <value>
                <fullName>Too busy to advertise</fullName>
            </value>
            <value>
                <fullName>Poor response from previous Advertising</fullName>
            </value>
            <value>
                <fullName>Space now sold</fullName>
            </value>
            <value>
                <fullName>Business Closed Down</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Lead Not Suitable</fullName>
            </value>
            <value>
                <fullName>Campaign ended</fullName>
            </value>
            <value>
                <fullName>System Auto Close</fullName>
            </value>
            <value>
                <fullName>Christchurch only - Business gone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>