News UAT/force-app/main/default/objects/Opportunity__x/fields/Region_c__c.field-meta.xml
<CustomField>
    <fullName>Region_c__c</fullName>
    <externalDeveloperName>Region__c</externalDeveloperName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEQ</fullName>
            </value>
            <value>
                <fullName>NQ</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>