News UAT/force-app/main/default/objects/Opportunity__x/fields/Representing_Agencies_Opps_c__c.field-meta.xml
<CustomField>
    <fullName>Representing_Agencies_Opps_c__c</fullName>
    <externalDeveloperName>Representing_Agencies_Opps__c</externalDeveloperName>
    <label>Representing Agencies Opps</label>
    <length>18</length>
    <type>Text</type>
</CustomField>