News UAT/force-app/main/default/objects/Opportunity__x/fields/Sales_Rep_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_c__c</fullName>
    <externalDeveloperName>Sales_Rep__c</externalDeveloperName>
    <label>Sales Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>