News UAT/force-app/main/default/objects/Opportunity__x/fields/Segmentation_NZ1_c__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_NZ1_c__c</fullName>
    <externalDeveloperName>Segmentation_NZ1__c</externalDeveloperName>
    <label>Segmentation NZ</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>