News UAT/force-app/main/default/objects/Opportunity__x/fields/Send_E_mail_to_Lead_Analyst_c__c.field-meta.xml
<CustomField>
    <fullName>Send_E_mail_to_Lead_Analyst_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Send_E_mail_to_Lead_Analyst__c</externalDeveloperName>
    <label>E-mail Lead Analyst</label>
    <type>Checkbox</type>
</CustomField>